--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,12 @@
       name="description"
       content="Jeffrey Ma's interactive resume."
     />
-    <link rel="apple-touch-icon" href="" />
+    <link rel="apple-touch-icon" href="jmlogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link rel="manifest" href="manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
